k8s/pg-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - name: pg
              containerPort: 5432
          resources:
            limits:
              memory: "2Gi"
              cpu: "2000m"
            requests:
              memory: "500Mi"
              cpu: "500m"
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-clusterip-srv
spec:
  selector:
    app: postgres
  type: ClusterIP
  ports:
    - name: pgport
      protocol: TCP
      port: 5432
      targetPort: 5432
---
