k8s/app-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fiap-burger-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fiap-burger-app
  template:
    metadata:
      labels:
        app: fiap-burger-app
    spec:
      terminationGracePeriodSeconds: 90
      automountServiceAccountToken: false
      containers:
        - name: fiap-burger-app
          image: gm50x/fiap-burger:v1-monolith
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              cpu: "800m"
              memory: "450Mi"
            requests:
              cpu: "200m"
              memory: "280Mi"
          livenessProbe:
            initialDelaySeconds: 30
            failureThreshold: 3
            periodSeconds: 15
            httpGet:
              # TODO: app should have health check endpoint
              path: /fiap-burger/swagger-ui/index.html
              port: 8080
          readinessProbe:
            initialDelaySeconds: 30
            periodSeconds: 10
            tcpSocket:
              port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: fiap-burger-app-clusterip-srv
spec:
  selector:
    app: fiap-burger-app
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fiap-burger-app-srv-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: "/fiap-burger"
            pathType: Prefix
            backend:
              service:
                name: fiap-burger-app-clusterip-srv
                port:
                  number: 8080
